cap 2 - andamento do cap, prox sql

--- a/main.tex
+++ b/main.tex
@@ -158,6 +158,10 @@ Orientador: John Doe}
 % inserir lista de abreviaturas e siglas
 \begin{siglas}
 \item[HTML]   \textit{HyperText Markup Language}
+\item[CSS]	  \textit{Cascading Style Sheets}
+\item[API]    \textit{Application Programming Interface}
+\item[HTTP]   \textit{HyperText Transfer Protocol}
+\item[TCP]    \textit{Transmission Control Protocol}
 \item[JSON]   \textit{JavaScript Object Notation}
 \item[REST]   \textit{Representational State Transfer}
 \item[EPE]    \textit{Empresa de Pesquisa Energética}
