cap 2 - finalização da linguagem de programação e inicio do hardware

--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 \usepackage{listings} 			%Inserir códigos fontes
 \usepackage{rotating} 			%Rotação de páginas
 \usepackage{placeins}			% Forçar o posicionamento da figura
+\usepackage{siunitx} 
 \usepackage[top=3cm, bottom=2cm, left=3cm, right=2cm]{geometry} % Margens
 
 
@@ -162,7 +163,11 @@ Orientador: John Doe}
 \item[API]    \textit{Application Programming Interface}
 \item[HTTP]   \textit{HyperText Transfer Protocol}
 \item[TCP]    \textit{Transmission Control Protocol}
+\item[SQL]    \textit{Structured Query Language} 	
+\item[SDK]    \textit{Software Development Kit}
+\item[IoT]    \textit{Internet of Things}
 \item[JSON]   \textit{JavaScript Object Notation}
+\item[SCT]    \textit{Split-Core Current Transformer}
 \item[REST]   \textit{Representational State Transfer}
 \item[EPE]    \textit{Empresa de Pesquisa Energética}
 \item[ANEEL]  \textit{Agência Nacional de Energia Elétrica}
